# risk-assessment-converter

./: .gitignore  README.md  generate.py  pyproject.toml
templates/: ra.uni.typst
